Define Ig's categorical analog

--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -504,7 +504,7 @@ The most general type of objects these constructions apply to are called by Vain
 			for every pair of objects \(A\), and \(B\) in \(\mathcal{C}\). 
 	\end{enumerate}
 \end{definitions}
-The hexagon relations have look like they only have three terms instead of the six one might expect from the name. This is because we have ommited the reassociation natural isomorphisms that we can assume are identites by Remark \ref{rem:coherence-for-monoidal-categories}.
+The hexagon relations have look like they only have three terms instead of the six one might expect from the name. This is because we have omited the reassociation natural isomorphisms that we can assume are identites by Remark \ref{rem:coherence-for-monoidal-categories}.
 
 If a monoidal category \(\mathcal{C}\) is additionally additive, we can define Lie algebra objects internal to \(\mathcal{C}\).
 
